2007-08-28  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/AbstractBaseViewContent.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Fixed 81660+82491: Crash when
	  opening the Welcome-Page manually.

2007-08-24  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs: Fixed 82554: Creating new
	  project doesn't open it.

2007-08-21  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.Ide.StandardHeaders.StandardHeaderPanel.cs: Changed
	  standard header panel.

2007-08-21  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Tasks/TaskService.cs: Fixed 82496: Opening files causes
	  sigabrt.

2007-08-20  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs, MonoDevelop.Ide.Tasks/Task.cs,
	  MonoDevelop.Ide.Tasks/TaskService.cs: Fixed bug 82282:Error list pad
	  should take into account line changes done in files.

2007-08-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs,
	  MonoDevelop.Ide.CodeTemplates/CodeTemplateService.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/ExternalToolPanel.cs,
	  MonoDevelop.Ide.Commands/ToolsCommands.cs,
	  MonoDevelop.Ide.ExternalTools/ExternalTool.cs,
	  MonoDevelop.Ide.ExternalTools/ExternalToolService.cs,
	  MonoDevelop.Ide.ExternalTools/ToolLoader.cs: Fixed bug 75807: Save
	  file for external tools. Re-wrote external tools subsystem, fixed
	  some possible issues in the code templates.

2007-08-16  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/objects.xml: Assigned a better category to custom widgets.

2007-08-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Redirection to the
	  ViewCommandHandlers object is now done in the notebook instead of in
	  SdiWorkspaceWindow. In this way those commands will be enabled even if